--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: build web-app
+      run: |
+        cd ../web-app
+        pwd
+        echo running NPM build
+        npm run build
+        ls
+
+
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a multi-line script
