Cd up and check directory

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
     - name: build web-app
       run: |
         pwd
+        cd ..
+        pwd
+        ls
         echo running NPM build
         npm run build
         ls
