--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         npm install @vue/cli
         npm run build
         ls
-        aws s3
+        aws s3 sync dist/ s3://readwithme.com
 
 
     - name: Run a one-line script
