--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
         cd web-app
         echo running NPM build
         npm install @vue/cli
+        pwd
+        ls
         npm run build
         ls
         aws s3 sync dist/ s3://readwithme.com
