--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         pwd
         ls
         rm -rf node_modules
-        rm package-lock.json
+        npm install
         npm run build
         ls
         aws s3 sync dist/ s3://readwithme.com
