install vue axios

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
         ls
         rm -rf node_modules
         npm install
+        npm install --save vue-axios
         npm run build
         ls
         aws s3 sync dist/ s3://readwithme.com
