--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
         rm -rf node_modules
         npm install
         npm install --save vue-axios
+        npm install --save vuex
         npm run build
         ls
         aws s3 sync dist/ s3://readwithme.com
