--- a/web-app/package.json
+++ b/web-app/package.json
@@ -13,8 +13,11 @@
     "quagga": "^0.12.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
+    "vue-core-video-player": "^0.1.8",
     "vue-router": "^3.1.5",
+    "vue-video-player": "^5.0.2",
     "vuetify": "^2.2.8",
+    "vuetify-media-player": "^0.8.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
