--- a/web-app/package.json
+++ b/web-app/package.json
@@ -18,7 +18,8 @@
     "vue-video-player": "^5.0.2",
     "vuetify": "^2.2.8",
     "vuetify-media-player": "^0.8.1",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
